# rollbar-java

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle  build.gradle.kts  gradle.properties  parent-pom.xml  pom.xml  settings.gradle  settings.gradle.kts
.github/: release.sh  secring.gpg.enc
.palantir/: revapi.yml
.travis/: release.sh  secring.gpg.enc
build-logic/: settings.gradle.kts
gradle/: android.quality.gradle  compatibility.gradle  quality.gradle  release.gradle  rollbarlibs.versions.toml
native-agent/: Cargo.toml  README.md  build.rs
native-agent/src/: env.rs  errors.rs  exceptions.rs  jni.rs  jvmti.rs  lib.rs
network-agent/: build.gradle.kts
rollbar-android/: build.gradle  build.gradle.kts  gradle.properties  proguard-rules.pro
rollbar-api/: gradle.properties
rollbar-jakarta-web/: build.gradle
rollbar-java/: build.gradle  build.gradle.kts  gradle.properties
rollbar-log4j2/: README.md  build.gradle
rollbar-logback/: build.gradle
rollbar-okhttp/: README.md  build.gradle.kts
rollbar-payload/: README.md  pom.xml
rollbar-reactive-streams/: build.gradle  build.gradle.kts
rollbar-reactive-streams-reactor/: README.md  build.gradle
rollbar-sender/: pom.xml
rollbar-spring-boot/: build.gradle
rollbar-spring-boot-web/: build.gradle
rollbar-spring-boot-webmvc/: README.md  build.gradle
rollbar-spring-boot3-webmvc/: build.gradle
rollbar-spring-webmvc/: README.md  build.gradle
rollbar-spring6-webmvc/: build.gradle
rollbar-struts2/: build.gradle
rollbar-testing/: README.md  pom.xml
(+487 files in other folders)
