[package]
name = "rollbar-java-agent"
version = "0.1.0"
authors = ["Andrew Weiss <wvvwwvw@gmail.com>"]
build = "build.rs"

[lib]
crate_type = [ "cdylib" ]

[dependencies]
log = "0.4"
pretty_env_logger = "0.2.5"

[dependencies.error-chain]
version = "0.12.0"
default-features = false

[build-dependencies]
bindgen = "0.43.0"

[profile.release]
panic = "abort"
