[package]
name = "rollbar-java-agent"
version = "0.1.0"
authors = ["Andrew Weiss <wvvwwvw@gmail.com>"]
build = "build.rs"

[lib]
crate_type = [ "cdylib" ]

[dependencies]
jni = "0.21.1"
log = "0.4.26"
pretty_env_logger = "0.5.0"

[dependencies.error-chain]
version = "0.12.0"
default-features = false

[build-dependencies]
bindgen = "0.71.1"

[profile.release]
panic = "abort"
